--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Excalidraw App</title>
+    <title>AH</title>
     <script>
       // 确保资源路径正确
       window.EXCALIDRAW_ASSET_PATH = "/excalidraw-assets/";
