--- a/frontend/excalidraw-app/index.html
+++ b/frontend/excalidraw-app/index.html
@@ -2,13 +2,31 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>AHExcalidraw</title>
+    <title>Excalidraw 桌面版</title>
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover, shrink-to-fit=no"
     />
+    <meta name="referrer" content="origin" />
+    <meta name="mobile-web-app-capable" content="yes" />
     <meta name="theme-color" content="#121212" />
 
+    <!-- Primary Meta Tags -->
+    <meta
+      name="title"
+      content="Excalidraw 桌面版"
+    />
+    <meta
+      name="description"
+      content="ExcalidrawDesktop是Excalidraw的桌面版，可不依赖网络完全本地运行，由Ah二次开发集成。"
+    />
+    <meta name="image" content="https://excalidraw.com/og-image-3.png" />
+
+
+
+
+    <!------------------------------------------------------------------------->
+    <!--   to minimize white flash on load when user has dark mode enabled   -->
     <script>
       try {
         function setTheme(theme) {
@@ -21,6 +39,7 @@
 
         function getTheme() {
           const theme = window.localStorage.getItem("excalidraw-theme");
+
           if (theme && theme === "system") {
             return window.matchMedia("(prefers-color-scheme: dark)").matches
               ? "dark"
@@ -29,12 +48,12 @@
             return theme || "light";
           }
         }
+
         setTheme(getTheme());
       } catch (e) {
         console.error("Error setting dark mode", e);
       }
     </script>
-
     <style>
       html.dark {
         background-color: #121212;
@@ -42,26 +61,83 @@
       }
     </style>
 
+    <!-- Warmup the connection for Google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
+    <!------------------------------------------------------------------------->
+    <% if (typeof PROD != 'undefined' && PROD == true) { %>
+    <script>
+      // Redirect Excalidraw+ users which have auto-redirect enabled.
+      //
+      // Redirect only the bare root path, so link/room/library urls are not
+      // redirected.
+      //
+      // Putting into index.html for best performance (can't redirect on server
+      // due to location.hash checks).
+      if (
+        window.location.pathname === "/" &&
+        !window.location.hash &&
+        !window.location.search &&
+        // if its present redirect
+        document.cookie.includes("excplus-autoredirect=true")
+      ) {
+        window.location.href = "https://app.excalidraw.com";
+      }
+    </script>
+
+    <!-- Following placeholder is replaced during the build step -->
+    <!-- PLACEHOLDER:EXCALIDRAW_APP_FONTS -->
+
+    <!-- Register Assistant as the UI font, before the scene inits -->
     <link
       rel="stylesheet"
       href="../packages/excalidraw/fonts/fonts.css"
       type="text/css"
     />
 
+    <% } else { %>
     <script>
       window.EXCALIDRAW_ASSET_PATH = window.origin;
     </script>
+    <% } %>
 
-    <!-- 基础图标 -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
 
+    <!-- Excalidraw version -->
+    <meta name="version" content="{version}" />
+
+    <% if (typeof VITE_APP_DEV_DISABLE_LIVE_RELOAD != 'undefined' &&
+    VITE_APP_DEV_DISABLE_LIVE_RELOAD == true) { %>
+    <script>
+      {
+        const _WebSocket = window.WebSocket;
+        window.WebSocket = function (url) {
+          if (/ws:\/\/localhost:.+?\/sockjs-node/.test(url)) {
+            console.info(
+              "[!!!] Live reload is disabled via VITE_APP_DEV_DISABLE_LIVE_RELOAD [!!!]",
+            );
+          } else {
+            return new _WebSocket(url);
+          }
+        };
+      }
+    </script>
+    <% } %>
+    <script>
+      // setting this so that libraries installation reuses this window tab.
+      window.name = "_excalidraw";
+    </script>
+
+    <!-- FIXME: remove this when we update CRA (fix SW caching) -->
     <style>
       body,
       html {
         margin: 0;
         -webkit-text-size-adjust: 100%;
+
         width: 100%;
         height: 100%;
         overflow: hidden;
@@ -107,5 +183,39 @@
     </header>
     <div id="root"></div>
     <script type="module" src="index.tsx"></script>
+    <% if (typeof PROD != 'undefined' && PROD == true) { %>
+    <!-- 100% privacy friendly analytics -->
+    <script>
+      // need to load this script dynamically bcs. of iframe embed tracking
+      var scriptEle = document.createElement("script");
+      scriptEle.setAttribute(
+        "src",
+        "https://scripts.simpleanalyticscdn.com/latest.js",
+      );
+      scriptEle.setAttribute("type", "text/javascript");
+      scriptEle.setAttribute("defer", true);
+      scriptEle.setAttribute("async", true);
+      // if iframe
+      if (window.self !== window.top) {
+        scriptEle.setAttribute("data-auto-collect", true);
+      }
+
+      document.body.appendChild(scriptEle);
+
+      // if iframe
+      if (window.self !== window.top) {
+        scriptEle.addEventListener("load", () => {
+          if (window.sa_pageview) {
+            window.window.sa_event(action, {
+              category: "iframe",
+              label: "embed",
+              value: window.location.pathname,
+            });
+          }
+        });
+      }
+    </script>
+    <!-- end LEGACY GOOGLE ANALYTICS -->
+    <% } %>
   </body>
 </html>
